# poly

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yml
examples/: CMakeLists.txt  irq_set_with_data.cpp  irq_with_data.cpp  timer.cpp
include/poly/: algorithm.hpp  bitutil.hpp  chrono.hpp  config.hpp  crc.hpp  function.hpp  function_ref.hpp  irq_event.hpp  irq_event_runtime.hpp  irq_event_set.hpp  iterator.hpp  limits.hpp  macro.hpp  manual_lifetime.hpp  md5.hpp  panic.hpp  power.hpp  ratio.hpp  result.hpp  soft_event.hpp  string_literal.hpp  timer.hpp  type_traits.hpp  utility.hpp
include/poly/alloc/: slot_allocator.hpp
include/poly/com/: bytestuffing.hpp  framer.hpp
include/poly/detail/: irq_event_base.hpp
include/poly/platform/: power.hpp
include/poly/platform/nrf52840/: power.hpp
include/poly/platform/pc/: power.hpp
include/poly/platform/testing/: power.hpp
src/: md5.cpp  panic.cpp  power.cpp  timer.cpp
test/: CMakeLists.txt  bitutil.cpp  bytestuffing.cpp  chrono.cpp  clock.cpp  framer.cpp  function.cpp  googletest.cmake  irq_event.cpp  md5.cpp  power.cpp  result.cpp
